--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,18 @@ services:
       build: ./server
       ports:
         - "8000:8000"
+      healthcheck:
+        test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://127.0.0.1:8000/docs')\""]
+        interval: 10s
+        timeout: 5s
+        retries: 5
+        start_period: 180s
       environment:
         - TEST_IMPORT=${TEST_IMPORT}
         - PROXY_API_KEY=${PROXY_API_KEY}
         - PROXY_BASE_URL=${PROXY_BASE_URL}
         - PROXY_MODEL=${PROXY_MODEL:-gpt-4o-mini}
+        - EMBEDDING_MODELS_DIR=/data/embedding-models
         - POSTGRES_USER=${POSTGRES_USER}
         - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         - POSTGRES_DB=${POSTGRES_DB}
@@ -40,11 +47,12 @@ services:
         - ./bot:/app/bot
         - ./templates:/app/templates:ro
       depends_on:
-        - server
+        server:
+          condition: service_healthy
       restart: unless-stopped 
 
   postgres:
-    image: postgres:16
+    image: ankane/pgvector
     container_name: mentormatch-postgres
     restart: unless-stopped
     env_file:
