--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,7 +9,14 @@ RUN apt-get update \
     && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --upgrade pip && \
+    pip install --index-url https://download.pytorch.org/whl/cpu torch==2.3.1
+
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip install --prefer-binary -r requirements.txt
+
 
 COPY . .
 
