--- a/google_data/Dockerfile
+++ b/google_data/Dockerfile
@@ -1,4 +1,4 @@
-﻿FROM python:3.11-slim
+FROM python:3.11-slim
 
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
@@ -7,17 +7,17 @@ WORKDIR /app
 
 RUN find /etc/apt -type f \( -name '*.list' -o -name '*.sources' \) -exec sed -i 's|http://deb.debian.org|https://deb.debian.org|g' {} + \
     && apt-get update \
-    && apt-get install -y --no-install-recommends build-essential libpq-dev curl ca-certificates \
+    && apt-get install -y --no-install-recommends build-essential libpq-dev curl \
     && rm -rf /var/lib/apt/lists/*
 
-COPY server/requirements.txt ./requirements.txt
+COPY google_data/requirements.txt ./requirements.txt
 RUN pip install --upgrade pip \
     && pip install --no-cache-dir -r requirements.txt
 
-COPY server /app
+COPY google_data /app/google_data
 
 ENV PYTHONPATH=/app
 
-EXPOSE 8000
+EXPOSE 8200
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "google_data.main:app", "--host", "0.0.0.0", "--port", "8200"]
