--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       PAIRS_SPREADSHEET_ID: ${PAIRS_SPREADSHEET_ID:-}
     volumes:
       - ./server:/app
-      - ./data/media:/data/media
+      - media_data:/data/media
     depends_on:
       postgres:
         condition: service_healthy
@@ -53,7 +53,7 @@ services:
       SERVICE_ACCOUNT_FILE: ${SERVICE_ACCOUNT_FILE:-service-account.json}
     volumes:
       - ./admin:/app/admin
-      - ./data/media:/data/media
+      - media_data:/data/media
     depends_on:
       postgres:
         condition: service_healthy
@@ -85,7 +85,7 @@ services:
       PAIRS_SPREADSHEET_ID: ${PAIRS_SPREADSHEET_ID:-}
     volumes:
       - ./google_data:/app/google_data
-      - ./data/media:/data/media
+      - media_data:/data/media
       - ./google_data/service-account.json:/app/google_data/service-account.json:ro
     depends_on:
       postgres:
@@ -112,7 +112,7 @@ services:
       EMBEDDING_MODELS_DIR: /app/matching/models
     volumes:
       - ./matching:/app/matching
-      - ./data/media:/data/media
+      - media_data:/data/media
     depends_on:
       postgres:
         condition: service_healthy
@@ -167,4 +167,5 @@ services:
 volumes:
   pgdata:
   pgadmin_data:
+  media_data:
 
